# recover

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Makefile.aws.mk  Pulumi.yaml  README.md  __main__.py  catalog-info.yaml  docker-compose-localstack.yaml  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci_cd.yaml
recover/: const.py  infra.py  tables.py
recover/api/v1/docs/: index.html
recover/api/v1/subscriber/: get.py  post.py
recover/api/v1/subscriber/list/: get.py
recover/domain/subscriber/: crud.py  models.py
recover/domain/util/: validators.py
recover/iac/: _lambda.py  api_gateway.py  cognito.py  dynamodb.py  lambda_iam.py  route.py
tests/: conftest.py
tests/api/v1/subscriber/: test_get.py  test_post.py
tests/api/v1/subscriber/list/: test_get.py
tests/domain/subscriber/: test_crud.py
tests/test_util/: fixtures.py  tables.py
